--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'androidx.preference:preference:1.1.1'
     //implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     def version_retrofit = "2.9.0"
