--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.tvmazeapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
+        android:name=".TVMazeApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".TVMazeApp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TVMazeApp">
+        <activity
+            android:name=".presentation.views.SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
         <activity
             android:name=".presentation.views.ShowsActivity"
             android:exported="true"
@@ -21,10 +23,11 @@
             tools:targetApi="24">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
