--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,26 +45,9 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
-
-    //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'androidx.preference:preference:1.1.1'
-    //implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    def version_retrofit = "2.9.0"
-    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
-
-    def version_retrofit_coroutines_adapter = "0.9.2"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
-
-    // Moshi for parsing the JSON format
-    def version_moshi = "1.8.0"
-    implementation "com.squareup.moshi:moshi:$version_moshi"
-    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
     //Lifecycle
     def lifecycle_version = "2.4.0"
@@ -72,6 +55,20 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    //Retrofit
+    def version_retrofit = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    def version_retrofit_coroutines_adapter = "0.9.2"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
+
+    //implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
+    // Moshi for parsing the JSON format
+    def version_moshi = "1.8.0"
+    implementation "com.squareup.moshi:moshi:$version_moshi"
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
     //Kotlin Coroutines
     def coroutines_android_version = '1.6.0'
@@ -97,7 +94,6 @@ dependencies {
 
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
