--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,10 +95,7 @@ dependencies {
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    // Biometrics
-    implementation("androidx.biometric:biometric:1.2.0-alpha04")
-
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
